--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "chart.js": "^2.6.0",
     "detect-browser": "^1.7.1",
     "element-resize-detector": "^1.1.12",
+    "element-ui": "^2.4.1",
     "epic-spinners": "^1.0.1",
+    "expose-loader": "^0.7.5",
     "flag-icon-css": "^2.9.0",
     "font-awesome": "^4.7.0",
     "gemini-scrollbar": "^1.5.1",
     "google-maps": "^3.3.0",
+    "gsap": "^2.0.1",
     "ionicons": "^3.0.0",
+    "jquery": "^3.3.1",
     "kewler": "^1.0.8",
     "leaflet-map": "^0.2.1",
     "medium-editor": "^5.23.3",
